--- a/MusicStore/AlbumManager.xaml
+++ b/MusicStore/AlbumManager.xaml
@@ -42,7 +42,7 @@
                                 <ColumnDefinition Width="0.5*"/>
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="*Album Name: " 
+                            <TextBlock Text="{DynamicResource albumname} " 
                                        Grid.Column="0" 
                                        HorizontalAlignment="Right" 
                                        VerticalAlignment="Center"
@@ -51,7 +51,7 @@
                                        FontWeight="Medium"/>
                             <DockPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                                 <Button x:Name="RestoreAlbumNameButton" 
-                                        Content="Restore Album Name" 
+                                        Content="{DynamicResource restorealbumname}" 
                                         Margin="0,0,25,0" 
                                         Click="RestoreAlbumName_Click"
                                         Foreground="White"
@@ -91,12 +91,12 @@
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
                             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0">
-                                <TextBlock Text="Cover Image: " 
+                                <TextBlock Text="{DynamicResource coverimage}" 
                                            HorizontalAlignment="Right"
                                            Foreground="{DynamicResource napisy}"
                                            FontFamily="InriaSans-Light"
                                            FontWeight="Medium"/>
-                                <TextBlock Text="[Supported files: .jpg / .jpeg / .png]" 
+                                <TextBlock Text="{DynamicResource supportedfiles}" 
                                            FontStyle="Italic" 
                                            FontSize="10"
                                            Foreground="{DynamicResource napisy}"
@@ -113,7 +113,7 @@
                                 </Grid.ColumnDefinitions>
                                 <Button VerticalAlignment="Center" 
                                         HorizontalAlignment="Center" 
-                                        Content="Remove Image" 
+                                        Content="{DynamicResource removeimage2}" 
                                         Grid.Column="0" 
                                         Click="SetDefaultCoverImage_Click"
                                         Foreground="White"
@@ -135,7 +135,7 @@
                                 <!--Button below is only visible when window works in edit mode [Loaded song ID exists]-->
                                 <Button VerticalAlignment="Center" 
                                         HorizontalAlignment="Center" 
-                                        Content="Restore Previous Image" 
+                                        Content="{DynamicResource restorepreviousimage2}" 
                                         Grid.Column="1" 
                                         Click="RestoreCoverImage_Click"
                                         Foreground="White"
@@ -157,7 +157,7 @@
                                 <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
                                     <Button VerticalAlignment="Center" 
                                             HorizontalAlignment="Center" 
-                                            Content="Select File" 
+                                            Content="{DynamicResource selectfile3}" 
                                             Click="SelectFile_Click"
                                             Foreground="White"
                                             BorderThickness="0"
@@ -199,7 +199,7 @@
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,5,0,0">
-                                <TextBlock Text="*Authors: " 
+                                <TextBlock Text="{DynamicResource authors}" 
                                            VerticalAlignment="Center" 
                                            HorizontalAlignment="Right"
                                            Foreground="{DynamicResource napisy}"
@@ -207,7 +207,7 @@
                                            FontWeight="Medium"/>
                                 <Separator Height="5" Opacity="0"/>
                                 <!--Pressing Button below opens new Author Manager window for adding new Author to database, after creation automatically adds to the list of artist to the right-->
-                                <Button Content="Restore Author" 
+                                <Button Content="{DynamicResource restoreauthor}" 
                                         Margin="0,10,0,0" 
                                         x:Name="RestoreAuthorsButton" 
                                         Click="RestoreAuthors_Click"
@@ -259,7 +259,7 @@
                             
                             
                         </Grid>
-                        <Separator Height="10"/>
+                        <Separator Height="10" Background="{DynamicResource paski}"/>
 
                         <!--Tracks-->
                         <Grid>
@@ -269,7 +269,7 @@
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Right" Margin="0,5,0,0">
-                                <TextBlock Text="*Tracks: " 
+                                <TextBlock Text="{DynamicResource tracks2} " 
                                            VerticalAlignment="Center" 
                                            HorizontalAlignment="Right"
                                            Foreground="{DynamicResource napisy}"
@@ -277,7 +277,7 @@
                                            FontWeight="Medium"/>
                                 <Separator Height="5" Opacity="0"/>
                                 <!--Pressing Button below opens new Author Manager window for adding new Author to database, after creation automatically adds to the list of artist to the right-->
-                                <Button Content="Add new Track" 
+                                <Button Content="{DynamicResource addnewtrack2}" 
                                         VerticalAlignment="Center" 
                                         HorizontalAlignment="Right" 
                                         Click="AddNewTrack_Click"
@@ -297,7 +297,7 @@
                                         </ControlTemplate>
                                     </Button.Template>
                                 </Button>
-                                <Button Content="Restore Tracks" 
+                                <Button Content="{DynamicResource restoretracks}" 
                                         Margin="0,10,0,0" 
                                         x:Name="RestoreTracksButton" 
                                         Click="RestoreTracks_Click"
@@ -446,7 +446,7 @@
                                 </Button.Template>
                             </Button>
                         </Grid>
-                        <Separator Height="10"/>
+                        <Separator Height="10" Background="{DynamicResource paski}"/>
 
 
 
@@ -458,11 +458,11 @@
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
                             <StackPanel Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center">
-                                <TextBlock Text="*Shop Price: " 
+                                <TextBlock Text="{DynamicResource shopprice}" 
                                            Foreground="{DynamicResource napisy}" HorizontalAlignment="Right" VerticalAlignment="Center"
                                            FontFamily="InriaSans-Light"
                                            FontWeight="Medium"/>
-                                <TextBlock Text="[Allowed format: XX.XX / XX]" FontStyle="Italic" FontSize="10"
+                                <TextBlock Text="{DynamicResource allowedformat}" FontStyle="Italic" FontSize="10"
                                            Foreground="{DynamicResource napisy}"
                                            FontFamily="InriaSans-Light"
                                            FontWeight="Medium"/>
@@ -470,7 +470,7 @@
                             <DockPanel Grid.Column="2">
                                 <Button VerticalAlignment="Center" 
                                         HorizontalAlignment="Center" 
-                                        Content="Restore Price" 
+                                        Content="{DynamicResource restoreprice2}" 
                                         x:Name="RestorePriceButton" 
                                         Margin="0,0,25,0" 
                                         Click="RestorePrice_Click"
@@ -510,7 +510,7 @@
                                            FontWeight="Medium"/>
                             </DockPanel>
                         </Grid>
-                        <Separator Height="10"/>
+                        <Separator Height="10" Background="{DynamicResource paski}"/>
 
                     </StackPanel>
                 </ScrollViewer>
@@ -525,7 +525,7 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" 
                             Margin="25,0" 
-                            Content="Reset Changes" 
+                            Content="{DynamicResource resetchanges2}" 
                             Click="ResetChanges_Click"
                             Foreground="White"
                             BorderThickness="0"
@@ -543,7 +543,7 @@
                     </Button>
                     <Button Grid.Column="1" 
                             Margin="25,0" 
-                            Content="Save as New Album" 
+                            Content="{DynamicResource saveasnewalbum}" 
                             Click="SaveAsNewAlbum_Click"
                             Foreground="White"
                             BorderThickness="0"
@@ -562,7 +562,7 @@
                     <!--Button 2 Content= {When editing track = "Save Changes" / When creating new Track = "Add New Track"}-->
                     <Button Grid.Column="2" 
                             Margin="25,0" 
-                            Content="Save Changes" 
+                            Content="{DynamicResource savechanges2}" 
                             x:Name="SaveChangesButton" 
                             Click="SaveChanges_Click"
                             Foreground="White"
@@ -581,7 +581,7 @@
                     </Button>
                     <Button Grid.Column="3" 
                             Margin="25,0" 
-                            Content="Cancel" 
+                            Content="{DynamicResource cancel2}" 
                             Click="Cancel_Click"
                             Foreground="White"
                             BorderThickness="0"
