--- a/MusicStore/AuthorManager.xaml
+++ b/MusicStore/AuthorManager.xaml
@@ -42,7 +42,7 @@
                                 <ColumnDefinition Width="0.5*"/>
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="*Artist Name: " 
+                            <TextBlock Text="{DynamicResource artistname} " 
                                        Grid.Column="0" 
                                        HorizontalAlignment="Right" 
                                        VerticalAlignment="Center"
@@ -51,7 +51,7 @@
                                        FontWeight="Medium"/>
                             <DockPanel Grid.Column="2" HorizontalAlignment="Stretch" VerticalAlignment="Center">
                                 <Button x:Name="RestoreArtistNameButton" 
-                                        Content="Restore Artist Name" 
+                                        Content="{DynamicResource restoreartistname}" 
                                         Margin="0,0,25,0" 
                                         Click="RestoreArtistName_Click"
                                         Foreground="White"
@@ -91,12 +91,12 @@
                                 <ColumnDefinition Width="7.75*"/>
                             </Grid.ColumnDefinitions>
                             <StackPanel HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="0">
-                                <TextBlock Text="Artist Image:" 
+                                <TextBlock Text="{DynamicResource artistimage}" 
                                            HorizontalAlignment="Right"
                                            Foreground="{DynamicResource napisy}"
                                            FontFamily="InriaSans-Light"
                                            FontWeight="Medium"/>
-                                <TextBlock Text="[Supported files: .jpg / .jpeg / .png]" 
+                                <TextBlock Text="{DynamicResource supportedfiles}" 
                                            FontStyle="Italic" 
                                            FontSize="10"
                                            Foreground="{DynamicResource napisy}"
@@ -113,7 +113,7 @@
                                 </Grid.ColumnDefinitions>
                                 <Button VerticalAlignment="Center" 
                                         HorizontalAlignment="Center" 
-                                        Content="Remove Image" 
+                                        Content="{DynamicResource removeimage3}" 
                                         Grid.Column="0" 
                                         Click="SetDefaultCoverImage_Click"
                                         Foreground="White"
@@ -136,7 +136,7 @@
                                 <Button x:Name="restoreImageButton" 
                                     VerticalAlignment="Center" 
                                         HorizontalAlignment="Center" 
-                                        Content="Restore Previous Image" 
+                                        Content="{DynamicResource restorepreviousimage3}" 
                                         Grid.Column="1" 
                                         Click="RestoreCoverImage_Click"
                                         Foreground="White"
@@ -158,7 +158,7 @@
                                 <StackPanel Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Center">
                                     <Button VerticalAlignment="Center" 
                                             HorizontalAlignment="Center" 
-                                            Content="Select File" 
+                                            Content="{DynamicResource selectfile5}" 
                                             Click="SelectFile_Click"
                                             Foreground="White"
                                             BorderThickness="0"
@@ -205,7 +205,7 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Column="0" 
                             Margin="25,0" 
-                            Content="Reset Changes" 
+                            Content="{DynamicResource resetchanges3}" 
                             Click="ResetChanges_Click"
                             Foreground="White"
                             BorderThickness="0"
@@ -223,7 +223,7 @@
                     </Button>
                     <Button Grid.Column="1" 
                             Margin="25,0" 
-                            Content="Save as New Author" 
+                            Content="{DynamicResource saveasnewauthor}" 
                             Click="SaveAsNewArtist_Click"
                             Foreground="White"
                             BorderThickness="0"
@@ -242,7 +242,7 @@
                     <!--Button 2 Content= {When editing track = "Save Changes" / When creating new Track = "Add New Track"}-->
                     <Button Grid.Column="2" 
                             Margin="25,0" 
-                            Content="Save Changes" 
+                            Content="{DynamicResource savechanges3}" 
                             x:Name="SaveChangesButton" 
                             Click="SaveChanges_Click"
                             Foreground="White"
@@ -261,7 +261,7 @@
                     </Button>
                     <Button Grid.Column="3" 
                             Margin="25,0" 
-                            Content="Cancel" 
+                            Content="{DynamicResource cancel3}" 
                             Click="Cancel_Click"
                             Foreground="White"
                             BorderThickness="0"
