--- a/MusicStore/Pages/Library.xaml
+++ b/MusicStore/Pages/Library.xaml
@@ -339,6 +339,7 @@
                             Style="{DynamicResource button2}"
                             Width="90"
                             Height="40"
+                            Click="BuyItem_Click"
                             BorderThickness="0">
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
