--- a/MusicStore/Pages/Authors.xaml
+++ b/MusicStore/Pages/Authors.xaml
@@ -13,10 +13,20 @@
             <StackPanel x:Name="AuthorStackPanel" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                 <!--Whenever page refreshes, AuthorStackPanel is cleared and reloaded with Author list from database-->
                 <!--TEMPLATE of generated object//FOR DEBUG USE ONLY-->
-                <Button x:Name="artistID" Margin="10" Click="EditAuthor_Click">
+                <Button x:Name="artistID" Margin="10" Click="EditAuthor_Click" Style="{DynamicResource button1}" BorderThickness="0">
+                    <Button.Template>
+                        <ControlTemplate TargetType="Button">
+                            <Border
+                                        CornerRadius="10"
+                                        Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                                  HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
                     <StackPanel Orientation="Horizontal" Margin="5">
                         <Image Source="../obrazy/logo.png" Width="54" Height="54" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,10,0"/>
-                        <TextBlock Text="Artist Name" VerticalAlignment="Center" FontWeight="Bold" FontSize="36"/>
+                        <TextBlock Text="Artist Name" VerticalAlignment="Center" Foreground="White" FontFamily="InriaSans-Light" FontWeight="Bold" FontSize="36"/>
                     </StackPanel>
                 </Button>
                 <!--//END OF TEMPLATE-->
